--- a/cbv_team4/package.json
+++ b/cbv_team4/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^6.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.4.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
