--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "mongoose": "^6.6.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.3",
     "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "web-vitals": "^3.0.2"
   }
 }
