--- a/cbv_team4/package.json
+++ b/cbv_team4/package.json
@@ -7,14 +7,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "mongoose": "^6.6.1",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.4",
+    "nodejs": "^0.0.0",
+    "npm": "^8.19.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
