--- a/cbv_team4/package.json
+++ b/cbv_team4/package.json
@@ -43,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser":{
+    "child_process": false
   }
+  
 }
