--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "cors": "^2.8.5",
+    "dbc-can": "^1.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.6.3",
@@ -33,4 +34,5 @@
   "devDependencies": {
     "web-vitals": "^3.0.2"
   }
+  
 }
