--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
+    "reactflow": "^11.1.1",
     "socketcan": "^3.0.0"
   },
   "devDependencies": {
