--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-api": "cd cbv_team4/api && venv/bin/flask run --no-debugger"
   },
   "repository": {
     "type": "git",
@@ -19,19 +20,20 @@
   "homepage": "https://github.com/sw2team4/CAN-Bus-Visualizer#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.6.3",
     "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
-    "react-router-dom": "^6.4.1",
-    "react-scripts": "^2.1.3",
-    "reactflow": "^11.1.1",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1",
+    "reactflow": "^11.1.2",
     "socketcan": "^3.0.0"
   },
   "devDependencies": {
     "web-vitals": "^3.0.2"
-  }
+  },
+  "proxy": "http://127.0.0.1:5000"
 }
