--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
   "devDependencies": {
     "web-vitals": "^3.0.2"
   },
-  "proxy": "http://127.0.0.1:5000"
+  "proxy": "http://localhost:5000"
 }
