DELETED BACKEND JAVASCRIPT/modified gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # Dependency directories
 node_modules/
 
+
 # Optional npm cache directory
 .npm
 
 # dotenv environment variables file
-#.env
+.env
+.venv
+env/
+venv/
+
