--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "html2canvas": "^1.4.1",
     "mongoose": "^6.6.3",
     "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.8.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
-    "reactflow": "^11.3.0",
+    "reactflow": "^11.3.1",
     "socketcan": "^3.0.0"
   },
   "devDependencies": {
