--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "dom-to-image": "^2.6.0",
     "dotenv": "^16.0.3",
+    "downloadjs": "^1.4.7",
     "express": "^4.18.1",
+    "file-saver": "^2.0.5",
+    "filesaver": "^0.0.13",
+    "html-to-image": "^1.10.8",
     "html2canvas": "^1.4.1",
     "mongoose": "^6.6.3",
     "react-bootstrap": "^2.6.0",
